--- a/page_3.css
+++ b/page_3.css
@@ -1,11 +1,13 @@
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-  font-family: "Poppins";
+  font-family: "Poppins", sans-serif;
+  margin: 0;
   background-color: rgba(246, 244, 240, 1);
-  overflow: hidden;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -14,42 +16,48 @@ body {
 
 header {
   display: flex;
-  justify-content: center;
   flex-direction: column;
   align-items: center;
   margin-top: 24px;
 }
 
-.logo {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 16px;
-}
-
 main {
   margin-top: -100px;
 }
-.qoute {
+
+.middle-text {
+  margin-top: 100px;
+}
+
+.title {
+  font-size: 36px;
+  font-weight: 600;
+  margin-left: 48px;
+  margin-top: -24px;
+}
+
+.quote {
   font-size: 24px;
+  font-family: inherit;
   margin-top: 48px;
   text-align: center;
+  font-weight: 600;
   line-height: 1.5;
 }
 
 .btn-parent {
   display: flex;
   justify-content: center;
-  margin-top: 20px; /* Adds more space between quote and button */
+  margin-top: 20px;
 }
 
 .btn {
   font-size: 24px;
-  font-family: "Poppins";
   background-color: #35bd3a;
   border: none;
-  padding: 8px 60px;
+  padding: 10px 48px;
   font-weight: 600;
-  color: rgba(255, 255, 255, 1);
+  color: #fff;
   border-radius: 2px;
   box-shadow: 7px 5px 1px #01ab08;
   transition: transform 0.2s ease, background-color 0.3s ease,
@@ -65,45 +73,119 @@ main {
 
 .footer-text {
   text-align: center;
+  font-weight: 600;
   font-size: 18px;
   color: #888;
   margin-top: 20px;
 }
 
-svg {
-  width: 24px;
-}
-
-a {
-  text-decoration: none;
-}
-footer {
-  margin-bottom: 20px;
-}
 .parent-social {
   display: flex;
   justify-content: center;
 }
 
 .social-media {
-  max-width: 100px;
+  max-width: 175px;
   width: 100%;
   display: flex;
   justify-content: space-evenly;
-  vertical-align: middle;
 }
-/* Media Queries for Responsiveness */
-@media (max-width: 768px) {
-  .qoute {
-    font-size: 28px;
-  }
 
-  .btn {
-    font-size: 20px;
-    padding: 8px 40px;
-  }
+.social-media img {
+  width: 30px;
+  margin-block: 15px;
+}
 
-  .footer-text {
-    font-size: 16px;
-  }
+.abu {
+  max-width: 850px;
+  width: 100%;
+  padding: 75px;
+  margin-inline: auto;
+}
+
+.parent-container {
+  display: flex;
+  position: relative;
+}
+
+.green-arrow {
+  display: flex;
+  position: absolute;
+  left: -50px;
+  top: 50%;
+  transform: translateY(-50%);
+  margin-right: 30px;
+  align-items: center;
+}
+
+.red-arrow {
+  display: flex;
+  position: absolute;
+  right: -50px;
+  top: 50%;
+  transform: translateY(-50%);
+  align-items: center;
+}
+
+.graph-container {
+  width: 100%;
+  height: 100%;
+}
+
+.graph-text {
+  margin-top: 10px;
+  font-size: 16px;
+  font-weight: 600;
+  text-align: center;
+}
+
+.graph {
+  display: flex;
+  width: 100%;
+  height: 100px;
+  border-radius: 15px;
+  background-color: rgba(255, 122, 122, 1);
+  overflow: hidden;
+}
+
+.graph .green {
+  background-color: rgba(53, 189, 58, 1);
+  width: 75%;
+  border-radius: 10px;
+  height: 100%;
+}
+
+.graph .red {
+  background-color: rgba(255, 122, 122, 1);
+  width: 25%;
+  border-radius: 0 10px;
+  height: 100%;
+}
+
+.red-arrow-text {
+  position: absolute;
+  bottom: -30px;
+  left: 100%;
+  transform: translateX(-50%);
+  font-size: 16px;
+  font-weight: 600;
+  color: #333;
+  text-align: center;
+}
+
+.green-arrow-text {
+  position: absolute;
+  bottom: -30px;
+  transform: translateX(-50%);
+  font-size: 16px;
+  font-weight: 600;
+  color: #333;
+  text-align: center;
+}
+
+.footer-text-sec {
+  color: rgba(133, 133, 133, 1);
+  font-size: 10px;
+  text-align: center;
+  margin-bottom: 10px;
 }
