--- a/Started-Now.css
+++ b/Started-Now.css
@@ -1,55 +1,65 @@
 * {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
 }
 
 body {
-  background-color: #f6f4f0;
-  font-family: "Poppins", sans-serif;
+  margin: 0;
+  font-family: Poppins;
   min-height: 100vh;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
 }
 
 .parent {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 90vh;
-  width: 100%;
   flex-direction: column;
+  height: 100vh;
 }
 
+
 .btn {
-  font-size: 42px;
+  font-size: 1.5rem;
   background-color: #35bd3a;
   border: none;
-  padding: 25px 50px;
+  padding: 14px 28px;
   font-weight: 600;
   color: #ffffff;
-  border-radius: 5px;
+  border-radius: 8px;
   margin-top: 10px;
-  box-shadow: 12px 10px 8px #01ab08;
-
-  &:hover {
-    background-color: #2aa62e;
-    box-shadow: 10px 8px 6px #019306;
-    cursor: pointer;
-    transform: scale(1.05);
-  }
+  box-shadow: 6px 6px 4px rgba(1, 171, 8, 0.5);
+  cursor: pointer;
+  transition: all 0.3s ease;
+  max-width: 200px;
+  width: 90%;
+  text-align: center;
+  min-height: 50px;
 }
 
 .credits {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  position: absolute;
+  bottom: 10px;
+  width: 100%;
   text-align: center;
 }
 
-p {
-  color: rgba(133, 133, 133, 1);
+@media (max-width:768px) {
+  .main-page-logo img {
+    width: 375px;
+  }
+
+  .btn {
+    font-size: 1.2rem;
+    padding: 6px 10px;
+    font-weight: 600;
+    color: #ffffff;
+    border-radius: 8px;
+    margin-top: 10px;
+    box-shadow: 6px 6px 4px rgba(1, 171, 8, 0.5);
+    max-width: 200px;
+    width: 50%;
+  }
+
+  .credits {
+    font-size: 10px;
+  }
 }
