--- a/Quiz.css
+++ b/Quiz.css
@@ -24,7 +24,6 @@ header {
   align-items: flex-end;
   justify-content: center;
   margin-top: 24px;
-  /* Set default margin-top for larger screens */
 }
 
 .main-con {
@@ -102,19 +101,6 @@ header {
   margin-bottom: 16px;
 }
 
-.nav {
-  margin-top: 24px;
-  font-size: 24px;
-  display: flex;
-  justify-content: flex-end;
-}
-
-.nav a {
-  color: #02a409;
-  text-decoration: none;
-  display: none;
-}
-
 .credits {
   text-align: center;
   margin-top: 24px;
@@ -128,14 +114,15 @@ header {
   border: 2px solid rgba(53, 189, 58, 1);
 }
 
-@media (max-width: 900px) {
+/* Reduced margin-top for medium screens */
+@media (max-width: 768px) {
+
   main {
     padding: 16px;
   }
 
   header {
     margin-top: 16px;
-    /* Reduced margin-top for medium screens */
   }
 
   .question {
@@ -171,6 +158,7 @@ header {
 
   .credits {
     margin-top: 16px;
+    font-size: 10px;
   }
 }
 
@@ -182,12 +170,15 @@ header {
 
   header {
     margin-top: 0px;
-    /* Remove margin-top for smaller screens */
   }
 
   .question {
-    font-size: 12px;
+    font-size: 10px;
     padding: 12px 24px;
+  }
+
+  .speaker-svg svg {
+    width: 30px;
   }
 
   .question-num_p,
@@ -207,22 +198,18 @@ header {
   }
 
   .container-inputs {
+    font-size: 12px;
     padding: 12px 14px;
     margin-bottom: 8px;
   }
 
-  .nav {
-    margin-top: 12px;
-    font-size: 18px;
-  }
-
   .credits {
+    font-size: 9px;
     margin-top: 12px;
   }
 
   header {
     margin-top: 0px;
-    /* Remove margin-top completely for small screens */
   }
 
   header img {
