--- a/Quiz.css
+++ b/Quiz.css
@@ -89,6 +89,7 @@ header {
 }
 
 .container-inputs {
+  cursor: pointer;
   display: flex;
   align-items: center;
   font-size: 16px;
@@ -116,7 +117,6 @@ header {
 
 /* Reduced margin-top for medium screens */
 @media (max-width: 768px) {
-
   main {
     padding: 16px;
   }
